--- a/spotify-visualizer-client/public/index.html
+++ b/spotify-visualizer-client/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="See the waveforms of the track playing on yor Spotify"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
